--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node.js dependencies
 /node_modules
-/.pnp
+.pnp
 .pnp.js
 
-# testing
+# Test coverage
 /coverage
 
-# production
+# Production build
 /build
 
-# misc
-.DS_Store
+# Environment variables
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# macOS specific files
+.DS_Store
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Docker volumes
 docker-volumes
+
+# Ignored data files
 data
+
+# Ignored image files
 images
